--- a/as-tarot/src/components/Cards/Cards.css
+++ b/as-tarot/src/components/Cards/Cards.css
@@ -6,7 +6,9 @@
 
 .cards {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto ;
   gap: 10px;
   margin: 10px;
 }
+
+
