--- a/as-tarot/src/components/Cards/Cards.css
+++ b/as-tarot/src/components/Cards/Cards.css
@@ -1,7 +1,8 @@
 .card {
   border: 1px solid lightgrey;
   border-radius: 20px;
-  color: rgb(68, 68, 68)
+  color: rgb(68, 68, 68);
+  justify-content: space-between;
 }
 
 .cards {
@@ -9,6 +10,9 @@
   grid-template-columns: auto auto auto ;
   gap: 10px;
   margin: 10px;
+ 
+  min-height: 140px;
+
 }
 
 
